--- a/src/Arii/ATSBundle/Resources/translations/messages.fr.yml
+++ b/src/Arii/ATSBundle/Resources/translations/messages.fr.yml
@@ -1,5 +1,5 @@
 module.ATS: Autosys
-summary.ATS: Module de suivi des traitements Autosys.
+summary.ATS: Module de suivi des traitements Autosys
 text.ATS: Interface pour l'ordonnanceur "Workload Automation Autosys Edition" de CA.
 Summary: Sommaire
 List of requests: Liste des requêtes
